fix:texto, mobile telefono, productos grandes, mision y vision mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1191,6 +1191,15 @@ font-size: 40px;
   .home-content{
   	padding-top: 50px;
   }
+	
+.mv,.mvm{
+	max-height: inherit;
+}
+
+.pic-prod img{
+height: 400px;
+}
+
 }
 
 
